--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
+dist: jammy
 language: python
 python:
-  - "3.10"
+  - "3.13.1"
 install:
   - pip install -r requirements.txt
   - python manage.py migrate
