--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,16 @@ asgiref==3.8.1
 black==25.1.0
 click==8.1.8
 colorama==0.4.6
+dj-database-url==2.3.0
 Django==5.1.5
+gunicorn==23.0.0
 mypy-extensions==1.0.0
 packaging==24.2
 pathspec==0.12.1
 platformdirs==4.3.6
+psycopg2-binary==2.9.10
 pytz==2024.2
 sqlparse==0.5.3
+typing_extensions==4.12.2
 tzdata==2025.1
+whitenoise==6.9.0
